Adding seminar tex

--- a/Documents/presentation/Makefile
+++ b/Documents/presentation/Makefile
@@ -1,13 +1,11 @@
-all: seminar.pdf 
+all: 
+	rubber -d seminar.tex 
 
 show: all 
 	evince seminar.pdf 
 
 figs:
 	mpost figs/*.mp
-
-seminar.pdf:
-	rubber -d seminar.tex 
 
 clean:
 	git clean -xf
