--- a/simcamCV/Makefile
+++ b/simcamCV/Makefile
@@ -1,7 +1,7 @@
 CC = g++
 CFLAGS = -lopencv_imgproc -lopencv_highgui -lopencv_calib3d -lopencv_core
 
-all: check calibrate noise distort
+all: check calibrate noise distort diff
 
 check:
 	$(CC) -o check check.c $(CFLAGS)
